# SimulatedTradingPlatform

./: .env  .gitignore  .pre-commit-config.yaml  README.md  TODO.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: df140d6da73f_initial_migration_account_holdings_.py
app/: cli.py  main.py
app/api/: deps.py
app/api/middleware/: error_handler.py
app/api/routes/: health.py  market.py  portfolio.py  trading.py
app/core/: config.py  logging.py
app/db/: __init__.py  database.py  seed.py
app/models/: __init__.py
app/schemas/: __init__.py  portfolio.py  trading.py
app/services/market_data/: __init__.py  base.py  coingecko.py  exchange.py  resolver.py  yahoo.py
app/services/portfolio/: __init__.py  portfolio.py
app/services/trading/: __init__.py  execution.py  quote.py
tests/: conftest.py  test_api_trading.py  test_cli.py  test_cost_basis.py  test_exchange.py  test_market_data.py  test_models.py  test_portfolio.py  test_trading.py
